--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -6,7 +6,7 @@
     height: 7%;
     background-color: #9AC0CD;
     z-index: 11;
-    border-top: 1px solid white;
+    border-top: 1px solid #FFF;
 }
 
 .text span {
